--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
   "bugs": {
     "url": "https://github.com/shemnatey/modern_portfolio/issues"
   },
-  "homepage": "https://github.com/shemnatey/modern_portfolio#readme"
+  "homepage": "https://shemnatey.github.io/modern_portfolio#readme"
 }
